prevents zoom on ios

--- a/common/common.scss
+++ b/common/common.scss
@@ -60,6 +60,7 @@
 
       select {
         width: 120px;
+        font-size: $font-up-1;
       }
 
       .user {
